fix: last element not visible

--- a/packages/preferences/src/browser/preferences.module.less
+++ b/packages/preferences/src/browser/preferences.module.less
@@ -1,5 +1,7 @@
 @import '~@opensumi/ide-core-browser/lib/style/variable.less';
 
+@preference-indexes-margin-top: 5;
+
 .preferences {
   height: 100%;
   font-size: @base-font-size;
@@ -46,7 +48,6 @@
   .preferences_body {
     height: calc(100% - 40px);
     .preferences_indexes {
-      padding-top: 8px;
       .group_item {
         height: 26px;
         font-size: @base-font-size;
